<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Profile">

                <TextView
                    android:id="@+id/appbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/officinasans"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textFontWeight="600"
                    android:textSize="21sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_scrollFlags="scroll|enterAlways" />

                <ImageButton
                    android:id="@+id/filterButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:background="?android:selectableItemBackground"
                    android:backgroundTintMode="multiply"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_done_24"
                    app:layout_constraintBottom_toBottomOf="@+id/appbarTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/appbarTitle"
                    app:layout_scrollFlags="scroll|enterAlways" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            tools:context=".EditProfileActivity">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/margin202"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/changeImage"
                android:layout_width="134dp"
                android:layout_height="134dp"
                app:cardCornerRadius="500dp"
                app:layout_constraintStart_toStartOf="@+id/margin202"
                app:layout_constraintTop_toTopOf="@+id/guideline4">

                <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_user_profile_icon"
                    app:srcCompat="@drawable/ic_user_profile_icon" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:height="40dp"
                    android:background="#B5000000"
                    android:gravity="center|top"
                    android:lines="2"
                    android:text="@string/change_photo"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <TextView
                android:id="@+id/yourSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/your_surname"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/changeImage"
                app:layout_constraintTop_toTopOf="@+id/changeImage" />

            <EditText
                android:id="@+id/editSurname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/insert_surname"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/changeImage"
                app:layout_constraintTop_toBottomOf="@+id/yourSurname" />

            <TextView
                android:id="@+id/yourName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/your_name"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/editName"
                app:layout_constraintStart_toEndOf="@+id/changeImage" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/birthday"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/margin202"
                app:layout_constraintTop_toBottomOf="@+id/changeImage" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/margin202"
                app:layout_constraintTop_toBottomOf="@+id/editDate" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/e_mail"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/margin202"
                app:layout_constraintTop_toBottomOf="@+id/editPassword" />

            <TextView
                android:id="@+id/fillActivityInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lines="2"
                android:maxWidth="250dp"
                android:text="@string/fill_your_activity"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/margin202"
                app:layout_constraintTop_toBottomOf="@+id/editBirthday" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/insert_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/changeImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/changeImage" />

            <EditText
                android:id="@+id/editBirthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_icon_calendar"
                android:drawableRight="@drawable/ic_icon_calendar"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/email_for_notifications"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/margin202"
                app:layout_constraintTop_toBottomOf="@+id/birthday" />

            <EditText
                android:id="@+id/editDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:text="01 февраля 1980"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/margin202"
                app:layout_constraintTop_toBottomOf="@+id/fillActivityInfo" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/margin202"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:text="sometext" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:text="d.konstantinov@dk.com"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/margin202"
                app:layout_constraintTop_toBottomOf="@+id/email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
